--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,24 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.marquee-item {
+  border: 1px solid black;
+  height: 192px;
+  padding: 5px;
+  width: 150px;
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  flex-direction: column;
+  flex-shrink: 0;
 }
