--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,7 @@ body {
   flex-direction: column;
   flex-shrink: 0;
 }
+
+.clip-triangle {
+  clip-path: polygon(50% 0%, 280% 100%, 0% 100%, 0% 20%);
+}
