--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,7 @@ body {
 .clip-triangle {
   clip-path: polygon(50% 0%, 280% 100%, 0% 100%, 0% 20%);
 }
+
+.phrase-emphasis {
+  font-weight: bold;
+}
